--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 .gitreview export-ignore
 .scrutinizer.yml export-ignore
 .travis.yml export-ignore
+COPYING export-ignore
 docs export-ignore
 ISSUE_TEMPLATE.md export-ignore
 phpcs.xml export-ignore
